Project

General

Profile

Actions

Bug #27985

closed

force-backfill sets forced_recovery instead of forced_backfill in 13.2.1

Added by Bryan Stillwell over 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
David Zafman
Category:
Backfill/Recovery
Target version:
-
% Done:

0%

Source:
Community (user)
Tags:
Backport:
mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

I've noticed that using force-backfill in Mimic seems to be broken. It sets forced_recovery instead of forced_backfill:

  1. ceph pg dump |grep '^5.20'
    5.20 63093 0 0 62922 0 264019212418 2797 2797 active+remapped+backfill_wait 2018-08-27 11:13:49.564910 109038'65235 109994:3556568 [17,8,4,3,0,11] 17 [17,8,4,3,0,2] 17 103739'64833 2018-08-12 18:54:52.399979 100006'63993 2018-07-29 18:19:38.020477 0
  1. ceph pg force-backfill 5.20
    instructing pg(s) [5.20s0] on osd.17 to force-backfill;
  1. ceph pg dump 2>&1 | grep '^5.20'
    5.20 63093 0 0 62922 0 264019212418 2797 2797 active+forced_recovery+remapped+backfill_wait 2018-08-27 11:16:07.394805 109038'65235 109994:3556569 [17,8,4,3,0,11] 17 [17,8,4,3,0,2] 17 103739'64833 2018-08-12 18:54:52.399979 100006'63993 2018-07-29 18:19:38.020477 0
  1. ceph pg cancel-force-backfill 5.20
    pg 5.20 backfill not forced;
  1. ceph pg cancel-force-recovery 5.20
    instructing pg(s) [5.20s0] on osd.17 to cancel-force-recovery;

Related issues 2 (0 open2 closed)

Related to RADOS - Bug #38041: Fix recovery and backfill priority handlingResolvedDavid Zafman01/24/2019

Actions
Copied to RADOS - Backport #38111: mimic: force-backfill sets forced_recovery instead of forced_backfill in 13.2.1ResolvedNathan CutlerActions
Actions #1

Updated by David Zafman about 5 years ago

  • Related to Bug #38041: Fix recovery and backfill priority handling added
Actions #2

Updated by David Zafman about 5 years ago

  • Backport set to mimic
Actions #3

Updated by David Zafman about 5 years ago

  • Status changed from New to Pending Backport
Actions #4

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38111: mimic: force-backfill sets forced_recovery instead of forced_backfill in 13.2.1 added
Actions #5

Updated by David Zafman about 5 years ago

  • Assignee set to David Zafman
  • Pull request ID set to 23904
Actions #6

Updated by Nathan Cutler about 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF